# htb2025

./: .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: Caddyfile  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routers/: analysisquerys.py  dbquerys.py  filestore.py  filestorequerys.py  validation.py
backend/app/services/: analysis.py  database.py  filestore.py  logs.py  model.pkl
model/: create_dataset.py  model.pkl  train.py
skissue.com/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
skissue.com/public/: index.html  info.html  main.html  userFiles.html
skissue.com/src/components/: GraphBox.vue  GraphBox2.vue  ImageBox.vue  ImageUpload.vue  LowerContainer.vue  MovingCircle.vue  ParticleEffect.vue  UpperContainer.vue  normalImage.vue  particles.vue
skissue.com/src/pages/: index.ts  index.vue  info.ts  info.vue  main.ts  main.vue  userFiles.ts  userFiles.vue
