[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alex Davis <8m3xlt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
